# project21

./: .env  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  agent.py  backend-tasks.md  bm25_search.py  delete.py  docker-compose.yml  dop_for_data.py  embending.py  example_work.py  find answer.py  find.py  find_answer.py  index_documents.py  main.py  processing.py  project-arch.md  pyproject.toml  req.txt  requirements.txt  web_assets.md
.github/workflows/: codeql.yml
RAG_Misha/: delete.py  find.py  index_documents.py
app/: routes.py
app/agents/: __init__.py  analytics_agent.py  artifact_generator.py  orchestrator.py  router_agent.py  search_rag_agent.py  summarizer_agent.py
app/api/: deps.py
app/core/: config.py  dependencies.py  security.py  seed.py
app/crud/: crud_document.py  crud_user.py
app/models/: __init__.py  artifact.py  artifact_v2.py  chat.py  document.py  user.py
app/schemas/: artifact.py  artifact_v2.py  chat.py  document.py  user.py
app/services/: acl.py  chunker.py  citation.py  deduplicator.py  embedder.py  etl_pipeline.py  gigachat_provider.py  llm_provider.py  parser.py  rag_service.py  reranker.py  storage.py  token.py  user.py  validation.py  vector_store.py
app/templates/: 401.html  base.html  chat.html  dashboard.html  (+11 more)
plans/: agent-architecture-plan.md  artifact-generation-plan.md  artifact-generation-v2-plan.md  artifact-generator-v2-integration.md  auth-security-plan.md  cjm-map.md  cjm-structure.md  rag-misha-integration-plan.md  template-migration-plan.md
qdrant_storage/: meta.json
scripts/: backup.sh  deploy.sh
test/: test_startup.py  text.docx  ~$text.docx
tests/: test_artifact_generator_v2.py  test_artifact_pipeline_integration.py
uploads/: Запись встречи 06.07.2026 00-12-58 - чат.txt
(+26 files in other folders)
