[project]
name = "project21"
version = "0.1.0"
description = "My project description"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "annotated-types>=0.7.0",
    "anyio>=4.14.1",
    "certifi>=2026.6.17",
    "charset-normalizer>=3.4.9",
    "click>=8.4.2",
    "colorama>=0.4.6",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.8.0",
    "httpx>=0.28.1",
    "iniconfig>=2.3.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.9",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-sdk>=0.4.2",
    "mako>=1.3.12",
    "markupsafe>=3.0.3",
    "narwhals>=2.23.0",
    "numpy>=2.5.1",
    "orjson>=3.11.9",
    "pluggy>=1.6.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pygments>=2.20.0",
    "pytest>=9.1.1",
    "pytest-timeout>=2.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "simplejson>=4.1.1",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "starlette>=1.3.1",
    "tenacity>=9.1.4",
    "typing-extensions>=4.16.0",
    "urllib3>=2.7.0",
    "uvicorn>=0.51.0",
    "watchfiles>=1.2.0",
    "websockets>=15.0.1",
    "xxhash>=3.8.1",
    "passlib[argon2]>=1.7.4",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "pwdlib[argon2]>=0.3.0",
]

[tool.uv.workspace]
members = [
    "project_21",
]
